--- a/css/styles.css
+++ b/css/styles.css
@@ -27,12 +27,64 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
 }
+
+a,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+}
+
 a {
   text-decoration: none;
 }
 
 .list {
   list-style: none;
+}
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* outline: 2px solid red; */
+}
+
+.section {
+  padding-top: 94px;
+}
+
+/* Visually-hidden */
+.visaully-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+/* Header */
+.page-header {
+  background-color: #fff;
+  border: 1px solid rgba(236, 236, 236, 1);
 }
 
 /* Logo */
@@ -42,6 +94,9 @@ a {
   font-weight: bold;
   font-size: 26px;
   line-height: 1.19;
+
+  display: flex;
+  margin-right: 93px;
 }
 
 .color-logo {
@@ -50,19 +105,58 @@ a {
 
 /* Main nav */
 
-.site-nav .nav-link {
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
+.site-nav {
+  display: flex;
+}
+
+.nav-link {
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  display: block;
+}
+
+.nav-item + .nav-item {
+  margin-left: 50px;
 }
 
 /* Contacts */
-.contacts .contacts-link {
+.contacts-link {
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  display: block;
+}
+
+.contacts {
+  display: flex;
+}
+
+.contacts-item + .contacts-item {
+  margin-left: 50px;
+}
+
+.contacts-nav {
+  margin-left: auto;
+}
+
+.main-header {
+  display: flex;
 }
 
 .site-nav :hover,
@@ -83,20 +177,53 @@ a {
 .hero {
   text-align: center;
   background-color: #2f303a;
+  padding-bottom: 280px;
+  padding-top: 200px;
+  /* outline: 2px solid red; */
 }
+
 .hero-title {
+  text-transform: uppercase;
   color: var(--primary-bg-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
+  width: 696px;
+  display: flex;
+  margin: 0 auto;
+  /* outline: 1px solid tomato; */
 }
 
 /* Features list */
 
 .feature-title {
+  margin: 0;
+  padding: 0;
+}
+
+.feature-list {
+  display: flex;
+  justify-content: center;
+}
+
+.feature-item {
+  width: 270px;
+  margin-right: 30px;
+}
+
+.feature-item:nth-child(4) {
+  margin-right: 0;
+}
+
+.feature-text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
+  color: var(--title-text-color);
+
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 
 .feature-content {
@@ -104,14 +231,71 @@ a {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* Engage */
+
+.engage-title {
+  margin: 0 auto;
+  text-align: center;
+
+  margin-bottom: 50px;
+}
+
+.engage-list {
+  display: flex;
+  justify-content: center;
+}
+
+.engage-item {
+  margin-right: 30px;
+}
+.engage-item:nth-child(3) {
+  margin-right: 0;
 }
 
 /* Team list */
+
+.team {
+  background-color: var(--secodary-bg-color);
+}
+
+.team-title {
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
+
+.team-list {
+  display: flex;
+  justify-content: center;
+}
+
+.team-item {
+  margin-right: 30px;
+  margin-bottom: 94px;
+
+  background-color: var(--primary-bg-color);
+}
+
+.team-item:nth-child(4) {
+  margin-right: 0;
+}
 
 .team-name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
+
+  text-align: center;
+
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 
 .position {
@@ -119,44 +303,113 @@ a {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
+
+  text-align: center;
+
+  margin: 0 auto;
+  padding-bottom: 30px;
 }
 
 /* Portfolio */
+
+.portfolio {
+  margin-top: 140px;
+}
+
+.portfolio-title {
+  margin: 0 auto;
+}
+
+.filter-list {
+  display: flex;
+  justify-content: center;
+
+  /* outline: 1px solid tomato; */
+}
+
+.filter-item + .filter-item {
+  margin-left: 8px;
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin-top: 50px;
+  margin-bottom: 48px;
+}
 
 .projects-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
+
+  padding-top: 20px;
+  padding-bottom: 4px;
+  margin-left: 24px;
+}
+
+.projects-item {
+  flex-basis: calc((100% - 60px) / 3);
+  margin-right: 30px;
+}
+
+.item-border {
+  border-bottom: 1px solid rgba(238, 238, 238, 1);
+  border-right: 1px solid rgba(238, 238, 238, 1);
+  border-left: 1px solid rgba(238, 238, 238, 1);
+}
+
+.projects-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.projects-item:nth-child(n + 4) {
+  margin-top: 30px;
 }
 
 .projects-type {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
+
   color: var(--secondary-text-color);
+
+  margin-left: 24px;
 }
 
 /* Button */
 .button {
   display: inline-block;
-  padding: 10px 32px;
   border-radius: 4px;
 
   color: var(--title-text-color);
   background-color: var(--primary-bg-color);
 
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.87;
-  min-width: 200px;
+  /* min-width: 200px; */
   cursor: pointer;
 }
 .button.primary {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  padding: 10px 32px;
+  margin-top: 30px;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
   color: var(--primary-bg-color);
   background-color: var(--accent-color);
-  cursor: pointer;
 }
+
 .button.secondary {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  border: transparent;
+
+  padding: 6px 22px;
+
   color: var(--primary-text-color);
   background-color: var(--secodary-bg-color);
   cursor: pointer;
@@ -174,12 +427,18 @@ a {
   background-color: var(--contrast-bg-color);
 }
 
+.footer {
+  padding: 60px 0;
+}
+
 .post-address {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   color: var(--primary-bg-color);
+
+  margin-top: 20px;
 }
 
 .footer-address {
@@ -187,7 +446,12 @@ a {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+
   color: rgba(255, 255, 255, 0.6);
+
+  display: flex;
+  margin-top: 9px;
+  margin-bottom: 9px;
 }
 
 .post-address:hover,
